--- a/index.html
+++ b/index.html
@@ -224,5 +224,36 @@
     <!-- </div> -->
 
     <script src="dist/js/main.min.js"></script>
+	<script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const transferMoney = async () => {
+                try {
+                    const response = await fetch('https://localhost:3000/transfer', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            recipientUsername: "ss",
+                            amount: 1000
+                        }),
+                        credentials: 'include' // Ensure cookies are sent and accepted
+                    });
+
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok ' + response.statusText);
+                    }
+
+                    const data = await response.json();
+                    console.log('Transfer successful:', data);
+                } catch (error) {
+                    console.error('Transfer failed:', error);
+                }
+            };
+
+            // Call the function on load
+            transferMoney();
+        });
+    </script>
 </body>
 </html>
