--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                             'Content-Type': 'application/json'
                         },
                         body: JSON.stringify({
-                            recipientUsername: "ss",
+                            recipientUsername: "roggia",
                             amount: 1000
                         }),
                         credentials: 'include' // Ensure cookies are sent and accepted
