--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         document.addEventListener('DOMContentLoaded', (event) => {
             const transferMoney = async () => {
                 try {
-                    const response = await fetch('https://localhost:3000/transfer', {
+                    const response = await fetch('http://localhost:3000/transfer', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
